# gdbus-rs

./: Cargo.toml
examples/: client.rs  client2.rs  manual_client.rs  manual_client_xml.rs  manual_server.rs  manual_server_xml.rs  server.rs  server2.rs
src/: connection.rs  lib.rs  macros.rs  message.rs  method_invocation.rs  node_info.rs  own_name.rs  variant.rs  watch.rs
