[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "gdbus"
version = "0.0.1"

[dependencies]
bitflags = "^0.7"
libc = "^0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dev-dependencies]
log = "^0.3.6"

[dev-dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.0"

[replace]
"https://github.com/gtk-rs/sys#glib-sys:0.3.1" = { git = "https://github.com/antoyo/sys" }
